sumo/tests/sumo/output/vtypeprobe/errors/file_empty/errors.sumo
Error: Missing output definition for vtypeprobe 'test1'.
Quitting (on error).
